# credit-card-risk-model

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pytest.ini  pyproject.toml
.github/workflows/: testing.yml
db/: credit_card_approval.csv
src/cross_validation/: __init__.py
src/models/: model_alpha.ipynb  model_beta.ipynb  model_delta.ipynb  model_epsilon.ipynb  model_gamma.ipynb
src/plots/: analyse.ipynb  data_visual.ipynb  visualisation.ipynb
src/preprocessing/: insert_nulls.ipynb  preprocessing.ipynb  to_enum.py
src/preprocessing/converting/: insert_nulls.py  to_binary_columns.py  to_enum.py
src/preprocessing/scaling/: min_max.py  standard.py
src/preprocessing/supplementing/complex/: by_knn.py  by_random_from_distribution.py  by_regression.py
src/preprocessing/supplementing/simple/: by_mean.py  by_median.py  by_mode.py  by_zero.py
src/preprocessing/tests/: test_by_mean.py  test_by_mode.py  test_complex_supplementing.py  test_converting.py  test_csv_nulls.py  test_scaling.py  test_simple_supplementing.py  test_to_binary_columns.py  test_to_enum.py
src/scripts/: prepare.py
