[tool.poetry]
name = "mow"
version = "0.1.0"
description = "MOW II - Credit Card Approval ML"
authors = ["Michal99Zajac <michal.99.zajac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
ipykernel = "^6.22.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
opendatasets = "^0.1.22"
xgboost = "^1.7.5"
optuna = "^3.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# black configuration
[tool.black]
line-length = 100
target-version = ['py310']
